deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo
  namespace: default
  labels:
    app: k8s-demo
spec:
  selector:
    matchLabels:
      app: k8s-demo
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: k8s-demo
    spec:
      restartPolicy: Always
      containers:
        - name: k8s-demo
          image: alleninnz/k8s-demo:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              cpu: 50m
              memory: 200Mi
          livenessProbe:
            httpGet:
              path: /app/health
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: localtime
              mountPath: /etc/localtime
            - name: k8s-demo-pvc
              mountPath: /data
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
        - name: k8s-demo-pvc
          persistentVolumeClaim:
            claimName: k8s-demo-pvc

# HPA
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo
  namespace: default
spec:
  selector:
    app: k8s-demo
  sessionAffinity: None
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 10800
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
  type: NodePort
