ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-demo
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: hello-k8s.info
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: k8s-demo
                port:
                  number: 8080
